# gameprograming

Asteroids/: .gitignore  .gitmodules  Actor.cpp  Actor.h  CMakeLists.txt  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Ship.cpp  Ship.h
CSE387Lab2/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Animation.h  BGSpriteComponent.cpp  BGSpriteComponent.h  Component.h  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Main.cpp  MathLibsConstants.h  MultiAnimSpriteComponent.cpp  MultiAnimSpriteComponent.h  Ship.cpp  SpaceGame.cpp  SpaceGame.h  SpriteComponent.cpp  SpriteComponent.h  SpriteSheetActor.cpp  SpriteSheetActor.h
CSE387Lab3/: Actor.cpp  Actor.h  Asteroid.cpp  CannonBallActor.cpp  CannonBallActor.h  CircleComponent.cpp  CircleComponent.h  Game.cpp  Game.vcxproj  Game.vcxproj.filters  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  MathLibsConstsFuncs.h  MoveComponent.cpp  MoveComponent.h  PhysicalMovementComponent.cpp  PhysicalMovementComponent.h  Random.cpp  Random.h  Ship.cpp  Ship.h  SpriteComponent.cpp
CSE387Lab3/Debug/: Game.ilk
CSE387Lab3/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FMODProgrammersAPI/doc/: revision.txt
OpenGLEngine/: .gitmodules  Actor.cpp  Actor.h  CMakeLists.txt  Component.h  Game.cpp  Game.h  GameMath.h  InputComponent.h  Laser.h  MoveComponent.cpp  Shader.cpp  Shader.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
OpenGLEngine/Chapter03-mac.xcodeproj/project.xcworkspace/xcuserdata/binhnguyenthanh.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGLEngine/Shaders/: Basic.frag  Basic.vert  Sprite.frag  Sprite.vert  Transform.vert
chapter10_collision_detection/: CMakeLists.txt
chapter10_collision_detection/src/: Actor.cpp  BoxComponent.cpp  FPSActor.cpp  Game.cpp  Mesh.cpp  PhysWorld.cpp  Renderer.cpp  TargetActor.cpp
chapter11_user_interface/: CMakeLists.txt  Main.cpp
chapter11_user_interface/include/headers/: Actor.h  Collision.h  DialogBox.h  FollowActor.h  Game.h  HUD.h  Mesh.h  OrbitActor.h  Renderer.h  Texture.h  UIScreen.cpp  UIScreen.h
chapter11_user_interface/src/: AudioSystem.cpp  BallMove.cpp  FollowActor.cpp  FollowCamera.cpp  Font.cpp  Game.cpp  HUD.cpp  Mesh.cpp  PauseMenu.cpp  Renderer.cpp  Shader.cpp  SplineCamera.cpp  TargetActor.cpp  Texture.cpp  UIScreen.cpp  VertexArray.cpp
chapter12_skeleton_animation/: CMakeLists.txt
chapter12_skeleton_animation/Assets/: CatActionIdle.gpanim
chapter12_skeleton_animation/src/: Collision.cpp  Component.cpp  FollowActor.cpp  Game.cpp  HUD.cpp  PhysWorld.cpp  PlaneActor.cpp  Renderer.cpp  Shader.cpp  Skeleton.cpp  TargetComponent.cpp  Texture.cpp  VertexArray.cpp
chapter13_intermediate_graphic/: CMakeLists.txt
chapter13_intermediate_graphic/src/: Actor.cpp  AudioComponent.cpp  BoneTransform.cpp  CameraComponent.cpp  FollowActor.cpp  Font.cpp  Game.cpp  OrbitCamera.cpp  Renderer.cpp  SkeletalMeshComponent.cpp  Texture.cpp
chapter14_level_files_binary_data/src/: Animation.cpp  DialogBox.cpp  FPSCamera.cpp  FollowActor.cpp  HUD.cpp  Mesh.cpp  MeshComponent.cpp  MirrorCamera.cpp  OrbitActor.cpp  Renderer.cpp  UIScreen.cpp
chapter2_gameobjects-non-looping-animation/: CMakeLists.txt
chapter2_gameobjects-non-looping-animation/src/: AnimSpriteComponent.cpp  Game.cpp  Player.cpp
chapter2_tilemapgame/: CMakeLists.txt  Main.cpp
chapter2_tilemapgame/include/headers/: AnimSpriteComponent.h  Animation.h  MultiAnimSpriteComponent.h  SpriteSheetActor.h  TileMapComponent.h  TileMapGame.h
chapter2_tilemapgame/src/: Actor.cpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  GameMath.cpp  MultiAnimSpriteComponent.cpp  Ship.cpp  SpriteComponent.cpp  TileMapComponent.cpp  TileMapGame.cpp
chapter3_asteroids_game/: CMakeLists.txt
chapter3_asteroids_game/src/: Actor.cpp  Asteroid.cpp  CircleComponent.cpp  Game.cpp  InputComponent.cpp  Laser.cpp  MoveComponent.cpp  MultiAnimSpriteComponent.cpp  Random.cpp  Ship.cpp  SpriteSheetActor.cpp
chapter3_tilemapgame/: Main.cpp  Makefile
chapter4_ai_in_games/: CMakeLists.txt  Main.cpp
chapter4_ai_in_games/src/: AIComponent.cpp  AIState.cpp  AnimSpriteComponent.cpp  Enemy.cpp  Game.cpp  Grid.cpp  MoveComponent.cpp  NavComponent.cpp  Tile.cpp  Tower.cpp
chapter5_opengl/: CMakeLists.txt
chapter5_opengl/src/: Actor.cpp  Asteroid.cpp  Game.cpp  InputComponent.cpp  MoveComponent.cpp  Shader.cpp  Ship.cpp  SpriteComponent.cpp
chapter6_3Dgraphics/: CMakeLists.txt  Main.cpp  Readme.md
chapter6_3Dgraphics/include/headers/: CameraActor.h  Component.h  Game.h  InputComponent.h  Laser.h  Mesh.h  MoveComponent.h  Renderer.h  Shader.h  Ship.h  SpriteComponent.h
chapter6_3Dgraphics/src/: Actor.cpp  Asteroid.cpp  CameraActor.cpp  Game.cpp  GameMath.cpp  Laser.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  PlaneActor.cpp  Renderer.cpp  Shader.cpp  SpriteComponent.cpp
chapter7_audio/: CMakeLists.txt
chapter7_audio/src/: AudioComponent.cpp  AudioSystem.cpp  Game.cpp  Shader.cpp  Texture.cpp
chapter8_input_system/: CMakeLists.txt  Main.cpp
chapter8_input_system/src/: Actor.cpp  CameraActor.cpp  Game.cpp  MoveComponent.cpp
chapter9_cameras/: CMakeLists.txt
chapter9_cameras/Shaders/: Sprite.vert
chapter9_cameras/include/headers/: Actor.h  AudioComponent.h  Game.h  MeshComponent.h  MoveComponent.h  Renderer.h  SplineActor.h  SpriteComponent.h
chapter9_cameras/src/: FPSActor.cpp  Game.cpp  InputSystem.cpp  MeshComponent.cpp  MoveComponent.cpp  SoundEvent.cpp  SplineActor.cpp
game/: Readme.md  main  main.cpp
game/src/: game.cpp
gameOpenGL/: Readme.md  main.cpp
gameOpenGL/src/: VertextArray.h  game.cpp
gameobjects/: CMakeLists.txt  Readme.md  main.cpp
gameobjects/src/: Actor.cpp  BGSpriteComponent.cpp  Component.cpp  Ship.cpp  SpaceGame.cpp  SpriteComponent.cpp  game.cpp
intermediateC++/: main  main.cpp
pingpong/: main.cpp
pingpong/src/: game.cpp
tilemapgame/: CMakeLists.txt
(+193 files in other folders)
